Reader sidebar: prevent horizontal scroll

--- a/client/reader/sidebar/_style.scss
+++ b/client/reader/sidebar/_style.scss
@@ -1,6 +1,8 @@
 // Reader Sidebar
 .is-section-reader .sidebar {
 
+	overflow-x: hidden;
+
 	.sidebar__menu {
 		margin-bottom: 8px;
 
